syntax = "proto3"; /* default is proto2 */

option java_package = "com.naga.grpc.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

/* The request message containing the user's name.*/
message HelloRequest {
  string name = 1;
}

/* The response message containing the greetings */
message HelloReply {
  string message = 1;
  string source = 2;
}